<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_big"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Header Text -->
    <TextView
        android:text="@string/login_account_header"
        android:textSize="@dimen/text_big"
        android:gravity="center"
        android:textColor="@color/secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Email -->
    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_margin="@dimen/margin_big"
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Header Text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:text="@string/no_account_text"
            android:textSize="@dimen/text_small"
            android:textColor="@color/secondary"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/createAccountTextButton"
            android:text="@string/create_one_here_text"
            android:textSize="@dimen/text_small"
            android:textColor="@color/secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"/>
    </LinearLayout>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"/>
</LinearLayout>